# moderngl-cg

./: .gitignore  CMakeLists.txt  README.md  futebol.c  main.cpp  test.c
modern-triangle/: main.cpp
pinwheel/: main.c
soccer/: Ball.cpp  Ball.h  Camera.cpp  Camera.h  Player.cpp  Player.h  README.md  SoccerField.cpp  SoccerField.h  main.cpp
